--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,9 +1,9 @@
 version: '2'
 services:
-  web:
+  php70:
     volumes_from:
       - container:lcm-data-sync:rw
 
 volumes:
 	lcm-data-sync:
-	external: true
+	  external: true
